--- a/_posts/2019-12-28-the-us-narrative-today.html
+++ b/_posts/2019-12-28-the-us-narrative-today.html
@@ -1482,107 +1482,107 @@ stories:
   domain: http://www.post-register.com/
   link: http://post-register.com/district-perfect-in-financial-integrity-rating/
 images:
-- name: old-gas-pumps-oldgaspumps-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colorful-dream.jpg
-- name: 35562068104_fa20c57575-wreck.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-wreck.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dali-two.jpg
-- name: downtown-la-copper-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-copper-circuit.JPG
-- name: border-crossing-bordercrossing-oily-mcoilface.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-oily-mcoilface.png
-- name: dragon-desert-desert-dragon-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-copper-circuit.jpg
-- name: school-clouds-church-clouds-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-blocks.jpg
-- name: dc-statue-dcstatue-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-wols.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-smoking-cigarette.jpg
-- name: dragon-desert-desert-dragon-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-copper-circuit-2.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
-- name: old-church-oldchurch-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-smoking-cigarette.jpg
-- name: nazi-invasion-old-train-on-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-train-on-tracks.jpg
-- name: crow_rainbow_festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_rainbow_festival.jpg
-- name: crow_green_zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_green_zuma.jpg
-- name: nazi-invasion-gypsy-house-with-pen.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-gypsy-house-with-pen.jpg
-- name: machine-road-machine-road-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-creativity.jpg
-- name: abe-lincoln-one-ww2-dresden-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-dresden-file-00-00-15-87.jpg
-- name: bf-skinner-please-do-not-feed-the-pigeon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-please-do-not-feed-the-pigeon.jpg
-- name: white-house-whitehouse-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-oily-mcoilface.jpg
-- name: old-door-lock-old-door-lock-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-yellow-collage.jpg
-- name: downtown-los-angeles-downtown-la-atari-missle.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-atari-missle.JPG
-- name: stories-new-digital-bits-capital-dc-flag-side-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-digital-bits-capital-dc-flag-side-view.jpg
-- name: christianity-christianity-under-construction-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-attack-planes.jpg
-- name: oldcabin-store-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-kandinsky-bv.jpg
-- name: downtown-los-angeles-downtown-la-china-prop.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-china-prop.JPG
-- name: supreme-court-supremecourt-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-umberto-bocc.jpg
-- name: san-francisco-street-view-san-francisco-street-view-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-ww2-dresden.jpg
-- name: oldbarn-oldbarn-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-aqua.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-spagetti-accident.jpg
-- name: bordercrossing-bordercrossing-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dry-skin.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-crafty-painting.jpg
-- name: ellis-island-ellis-island-room-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-sunday.jpg
-- name: copper-circuit-train-small-town-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-small-town-station.jpg
-- name: gears-4882162452-fa3126b38d-b-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-bright-sand.jpg
-- name: cyber-api-description-wars-16402907-10154968484409813-8950624317719273541-o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-16402907-10154968484409813-8950624317719273541-o.jpg
-- name: crow_dark_pigeon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_pigeon.jpg
-- name: berlinwall2-berlinwall-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-emily-carr.jpg
-- name: oldbarn-oldbarn-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-hot-spicy.jpg
-- name: hollywood-building-hollywood-building-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dry-skin.jpg
-- name: art-museum-art-museum-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dali-three.jpg
-- name: fence-fence-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-circuit.jpg
-- name: rain-princess-container-several-colors-grey.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-container-several-colors-grey.jpg
-- name: capital-battle-capitolbattle-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-ww2-color.jpg
-- name: paris-paris-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-mucha-mult.jpg
-- name: nyc-flag-nycflag-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-oily-mcoilface.jpg
-- name: trucksilo-trucksilo-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-yellow-paper.jpg
-- name: cargo-ship-cargo-ship-on-sea-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-satan-red.jpg
-- name: paris-paris-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-umberto-bocc.jpg
-- name: rain-princess-IMG_8358.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8358.jpg
-- name: gypsy-wagon-gypsywagon-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-purp-paper.jpg
+- name: berlinwall-DSC-0084-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-post-modern.jpg
+- name: la-muse-lincoln-memorial_36690528196_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-lincoln-memorial_36690528196_o.jpg
+- name: powerlines-power-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-purp-paper.jpg
+- name: curtain-curtain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-really-hot.jpg
+- name: adam-smith-adam-smith-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-yellow-collage.jpg
+- name: fence-mexico.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-circuit-4.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-circuit-4.JPG
+- name: la-muse-fat-old-pigeon-on-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-fat-old-pigeon-on-fence.jpg
+- name: old-granary-field-granaryfield-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-constitution.jpg
+- name: razorcliff-razorcliff-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dali-two.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-circuit-4.jpg
+- name: old-granary-field-granaryfield-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-space-pizza.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-green-zuma.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-green-zuma.JPG
+- name: fence-fence-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-atari-missle.jpg
+- name: containership-containership-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-pablo-blue.jpg
+- name: wind-mills-windmills-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-marcel-duchamp.jpg
+- name: razorwire-DSC-0080-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colorful-blocks.jpg
+- name: crow_deep_connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_deep_connections.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit-3.jpg
+- name: old-barn-old-barn-1500-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-colorful-blocks.jpg
+- name: border-crossing-bordercrossing-kand-two.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-kand-two.png
+- name: container-ship-van-gogh-van-gogh-starry-night-container-bridge-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/container-ship-van-gogh-van-gogh-starry-night-container-bridge-2.jpg
+- name: fence-fence-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-far-away.jpg
+- name: art-museum-art-museum-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit-5.jpg
+- name: windowmountain-window-mountain-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-purp-paper.jpg
+- name: server-cloud-server-racks-door-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-crafty-painting.jpg
+- name: store-on-corner-oldcabin-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-rainbow-festival.jpg
+- name: bf-skinner-gears-pipes-plumbing.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-gears-pipes-plumbing.jpg
+- name: copper-circuit-seatlle-shipping-mountain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-seatlle-shipping-mountain.jpg
+- name: old-school-house-old-schoolhouse-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-green-zuma.jpg
+- name: rain-princess-bridge-over-columbia.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-bridge-over-columbia.jpg
+- name: supreme-court-supremecourt-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-monet-one.jpg
+- name: miamibeach-miamibeach-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-post-modern.jpg
+- name: rockingchair-rockingchair-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-post-modern.jpg
+- name: birdhouse-birdhouse-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-spagetti-accident.jpg
+- name: old-granary-field-oldhouse-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-wols.jpg
+- name: abandonedbuildings_dry_skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dry_skin.jpg
+- name: stories-new-17-88-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-17-88-800-500-0-max-0--5--5.jpg
+- name: birdhouse-birdhouse-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-smooth-ride.jpg
+- name: christianity-christianity-under-construction-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-marcel-duchamp.jpg
+- name: old-granary-field-granaryfield-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-crabapple.jpg
+- name: cargo-ship-cargo-ship-on-sea-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-umberto-bocc.jpg
+- name: copper-circuit-path-in-woods-green-lush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-path-in-woods-green-lush.jpg
+- name: birdhouse-birdhouse-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-matrix.jpg
+- name: la-muse-creepy-doll-looking-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-creepy-doll-looking-down.jpg
+- name: copper-circuit-girl-reading-garden-flowers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-girl-reading-garden-flowers.jpg
+- name: machine-road-machine-road-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-mucha-mult.jpg
+- name: oldhouse-granaryfield-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-yellow-collage.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-spagetti-accident.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-spagetti-accident.JPG
+- name: trucksilo-trucksilo-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-hot-spicy.jpg
 ---
 Yes, Virginia, There Is A Hospital Monopoly Problem In Indiana.&nbsp;Trump Lashes Out As Impeachment Trial Stuck In Limbo.&nbsp;Nesting Loons Have A Record Year.&nbsp;Couple Return For A 2nd Dunk At Dunkin', This Time With Vows.&nbsp;Trump Retweets, Deletes, Post Naming Alleged Whistleblower.&nbsp;Hundreds Of Accused Clergy Left Off Church's Sex Abuse Lists.&nbsp;Waking Up To 5G.&nbsp;Memphis Finishes Whirlwind Stretch With Cotton Bowl Loss.&nbsp;
